--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -59,12 +59,12 @@ jobs:
 
   package:
     name: Package
-    needs: build
+    needs: [ test, bench, format_check, clippy_check, check, build ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
-      - run: cargo --workspace --all-features --color=always
+      - run: cargo package --workspace --all-features --color=always
 
   publish:
     name: Publish
